@@ -12,7 +12,7 @@
  * GNU General Public License for more details.
  *
  * You should have received a copy of the GNU General Public License
- * along with this program.  If not, see [http://www.gnu.org/licenses/]
+ * along with this program. If not, see [https://www.gnu.org/licenses/]
  */
 
 package cn.taketoday.expression.spel;
@@ -23,7 +23,6 @@ import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Date;
 import java.util.GregorianCalendar;
 import java.util.HashMap;
@@ -33,8 +32,9 @@ import java.util.Map;
 import cn.taketoday.expression.EvaluationContext;
 import cn.taketoday.expression.Expression;
 import cn.taketoday.expression.ExpressionParser;
-import cn.taketoday.expression.common.TemplateParserContext;
+import cn.taketoday.expression.ParserContext;
 import cn.taketoday.expression.spel.standard.SpelExpressionParser;
+import cn.taketoday.expression.spel.support.SimpleEvaluationContext;
 import cn.taketoday.expression.spel.support.StandardEvaluationContext;
 import cn.taketoday.expression.spel.testresources.Inventor;
 import cn.taketoday.expression.spel.testresources.PlaceOfBirth;
@@ -62,13 +62,12 @@ class SpelDocumentationTests extends AbstractExpressionTests {
     c.set(1856, 7, 9);
     tesla = new Inventor("Nikola Tesla", c.getTime(), "Serbian");
     tesla.setPlaceOfBirth(new PlaceOfBirth("SmilJan"));
-    tesla.setInventions(new String[] { "Telephone repeater", "Rotating magnetic field principle",
+    tesla.setInventions("Telephone repeater", "Rotating magnetic field principle",
             "Polyphase alternating-current system", "Induction motor", "Alternating-current power transmission",
-            "Tesla coil transformer", "Wireless communication", "Radio", "Fluorescent lights" });
+            "Tesla coil transformer", "Wireless communication", "Radio", "Fluorescent lights");
 
     pupin = new Inventor("Pupin", c.getTime(), "Idvor");
     pupin.setPlaceOfBirth(new PlaceOfBirth("Idvor"));
-
   }
 
   @Test
@@ -87,11 +86,11 @@ class SpelDocumentationTests extends AbstractExpressionTests {
   }
 
   @Test
-  void rootObject() throws Exception {
+  void rootObject() {
     GregorianCalendar c = new GregorianCalendar();
     c.set(1856, 7, 9);
 
-    //  The constructor arguments are name, birthday, and nationaltiy.
+    // The constructor arguments are name, birthday, and nationality.
     Inventor tesla = new Inventor("Nikola Tesla", c.getTime(), "Serbian");
 
     ExpressionParser parser = new SpelExpressionParser();
@@ -105,7 +104,7 @@ class SpelDocumentationTests extends AbstractExpressionTests {
   }
 
   @Test
-  void equalityCheck() throws Exception {
+  void equalityCheck() {
     ExpressionParser parser = new SpelExpressionParser();
 
     StandardEvaluationContext context = new StandardEvaluationContext();
@@ -125,7 +124,7 @@ class SpelDocumentationTests extends AbstractExpressionTests {
 
   // Section 7.5
   @Test
-  void literals() throws Exception {
+  void literals() {
     ExpressionParser parser = new SpelExpressionParser();
 
     String helloWorld = (String) parser.parseExpression("'Hello World'").getValue(); // evals to "Hello World"
@@ -145,7 +144,7 @@ class SpelDocumentationTests extends AbstractExpressionTests {
   }
 
   @Test
-  void propertyAccess() throws Exception {
+  void propertyAccess() {
     EvaluationContext context = TestScenarioCreator.getTestEvaluationContext();
     int year = (Integer) parser.parseExpression("Birthdate.Year + 1900").getValue(context); // 1856
     assertThat(year).isEqualTo(1856);
@@ -155,7 +154,7 @@ class SpelDocumentationTests extends AbstractExpressionTests {
   }
 
   @Test
-  void propertyNavigation() throws Exception {
+  void propertyNavigation() {
     ExpressionParser parser = new SpelExpressionParser();
 
     // Inventions Array
@@ -183,7 +182,7 @@ class SpelDocumentationTests extends AbstractExpressionTests {
   }
 
   @Test
-  void dictionaryAccess() throws Exception {
+  void dictionaryAccess() {
     StandardEvaluationContext societyContext = new StandardEvaluationContext();
     societyContext.setRootObject(new IEEE());
     // Officer's Dictionary
@@ -202,13 +201,10 @@ class SpelDocumentationTests extends AbstractExpressionTests {
 
     Inventor i2 = parser.parseExpression("reverse[0]['advisors'][0]").getValue(societyContext, Inventor.class);
     assertThat(i2.getName()).isEqualTo("Nikola Tesla");
-
   }
 
-  // 7.5.3
-
   @Test
-  void methodInvocation2() throws Exception {
+  void methodInvocation2() {
     // string literal, evaluates to "bc"
     String c = parser.parseExpression("'abc'.substring(1, 3)").getValue(String.class);
     assertThat(c).isEqualTo("bc");
@@ -220,10 +216,8 @@ class SpelDocumentationTests extends AbstractExpressionTests {
     assertThat(isMember).isTrue();
   }
 
-  // 7.5.4.1
-
   @Test
-  void relationalOperators() throws Exception {
+  void relationalOperators() {
     boolean result = parser.parseExpression("2 == 2").getValue(Boolean.class);
     assertThat(result).isTrue();
     // evaluates to false
@@ -236,7 +230,7 @@ class SpelDocumentationTests extends AbstractExpressionTests {
   }
 
   @Test
-  void otherOperators() throws Exception {
+  void otherOperators() {
     // evaluates to false
     boolean falseValue = parser.parseExpression("'xyz' instanceof T(int)").getValue(Boolean.class);
     assertThat(falseValue).isFalse();
@@ -250,11 +244,8 @@ class SpelDocumentationTests extends AbstractExpressionTests {
     assertThat(falseValue).isFalse();
   }
 
-  // 7.5.4.2
-
   @Test
-  void logicalOperators() throws Exception {
-
+  void logicalOperators() {
     StandardEvaluationContext societyContext = new StandardEvaluationContext();
     societyContext.setRootObject(new IEEE());
 
@@ -290,10 +281,8 @@ class SpelDocumentationTests extends AbstractExpressionTests {
     assertThat(falseValue).isFalse();
   }
 
-  // 7.5.4.3
-
   @Test
-  void numericalOperators() throws Exception {
+  void numericalOperators() {
     // Addition
     int two = parser.parseExpression("1 + 1").getValue(Integer.class); // 2
     assertThat(two).isEqualTo(2);
@@ -334,10 +323,8 @@ class SpelDocumentationTests extends AbstractExpressionTests {
     assertThat(minusTwentyOne).isEqualTo(-21);
   }
 
-  // 7.5.5
-
   @Test
-  void assignment() throws Exception {
+  void assignment() {
     Inventor inventor = new Inventor();
     StandardEvaluationContext inventorContext = new StandardEvaluationContext();
     inventorContext.setRootObject(inventor);
@@ -345,27 +332,23 @@ class SpelDocumentationTests extends AbstractExpressionTests {
     parser.parseExpression("foo").setValue(inventorContext, "Alexander Seovic2");
 
     assertThat(parser.parseExpression("foo").getValue(inventorContext, String.class)).isEqualTo("Alexander Seovic2");
-    // alternatively
 
+    // alternatively
     String aleks = parser.parseExpression("foo = 'Alexandar Seovic'").getValue(inventorContext, String.class);
     assertThat(parser.parseExpression("foo").getValue(inventorContext, String.class)).isEqualTo("Alexandar Seovic");
     assertThat(aleks).isEqualTo("Alexandar Seovic");
   }
 
-  // 7.5.6
-
   @Test
-  void types() throws Exception {
+  void types() {
     Class<?> dateClass = parser.parseExpression("T(java.util.Date)").getValue(Class.class);
     assertThat(dateClass).isEqualTo(Date.class);
     boolean trueValue = parser.parseExpression("T(java.math.RoundingMode).CEILING < T(java.math.RoundingMode).FLOOR").getValue(Boolean.class);
     assertThat(trueValue).isTrue();
   }
 
-  // 7.5.7
-
   @Test
-  void constructors() throws Exception {
+  void constructors() {
     StandardEvaluationContext societyContext = new StandardEvaluationContext();
     societyContext.setRootObject(new IEEE());
     Inventor einstein =
@@ -375,38 +358,64 @@ class SpelDocumentationTests extends AbstractExpressionTests {
     parser.parseExpression("Members2.add(new cn.taketoday.expression.spel.testresources.Inventor('Albert Einstein', 'German'))").getValue(societyContext);
   }
 
-  // 7.5.8
-
   @Test
-  void variables() throws Exception {
+  void variables() {
     Inventor tesla = new Inventor("Nikola Tesla", "Serbian");
-    StandardEvaluationContext context = new StandardEvaluationContext();
+
+    EvaluationContext context = SimpleEvaluationContext.forReadWriteDataBinding().build();
     context.setVariable("newName", "Mike Tesla");
 
-    context.setRootObject(tesla);
+    parser.parseExpression("name = #newName").getValue(context, tesla);
 
-    parser.parseExpression("foo = #newName").getValue(context);
-
-    assertThat(tesla.getFoo()).isEqualTo("Mike Tesla");
+    assertThat(tesla.getName()).isEqualTo("Mike Tesla");
   }
 
   @Test
   @SuppressWarnings("unchecked")
-  void specialVariables() throws Exception {
-    // create an array of integers
-    List<Integer> primes = Arrays.asList(2, 3, 5, 7, 11, 13, 17);
+  void thisVariable() {
+    // Create a list of prime integers.
+    List<Integer> primes = List.of(2, 3, 5, 7, 11, 13, 17);
 
-    // create parser and set variable 'primes' as the array of integers
+    // Create parser and set variable 'primes' as the list of integers.
     ExpressionParser parser = new SpelExpressionParser();
-    StandardEvaluationContext context = new StandardEvaluationContext();
+    EvaluationContext context = SimpleEvaluationContext.forReadWriteDataBinding().build();
     context.setVariable("primes", primes);
 
-    // all prime numbers > 10 from the list (using selection ?{...})
-    List<Integer> primesGreaterThanTen = (List<Integer>) parser.parseExpression("#primes.?[#this>10]").getValue(context);
-    assertThat(primesGreaterThanTen.toString()).isEqualTo("[11, 13, 17]");
+    // Select all prime numbers > 10 from the list (using selection ?{...}).
+    String expression = "#primes.?[#this > 10]";
+
+    // Evaluates to a list containing [11, 13, 17].
+    List<Integer> primesGreaterThanTen =
+            parser.parseExpression(expression).getValue(context, List.class);
+
+    assertThat(primesGreaterThanTen).containsExactly(11, 13, 17);
   }
 
-  // 7.5.9
+  @Test
+  @SuppressWarnings("unchecked")
+  void thisAndRootVariables() {
+    // Create parser and evaluation context.
+    ExpressionParser parser = new SpelExpressionParser();
+    EvaluationContext context = SimpleEvaluationContext.forReadWriteDataBinding().build();
+
+    // Create an inventor to use as the root context object.
+    Inventor tesla = new Inventor("Nikola Tesla");
+    tesla.setInventions("Telephone repeater", "Tesla coil transformer");
+
+    // Iterate over all inventions of the Inventor referenced as the #root
+    // object, and generate a list of strings whose contents take the form
+    // "<inventor's name> invented the <invention>." (using projection !{...}).
+    String expression = "#root.inventions.![#root.name + ' invented the ' + #this + '.']";
+
+    // Evaluates to a list containing:
+    // Nikola Tesla invented the Telephone repeater.
+    // Nikola Tesla invented the Tesla coil transformer.
+    List<String> results = parser.parseExpression(expression).getValue(context, tesla, List.class);
+
+    assertThat(results).containsExactly(
+            "Nikola Tesla invented the Telephone repeater.",
+            "Nikola Tesla invented the Tesla coil transformer.");
+  }
 
   @Test
   void functions() throws Exception {
@@ -450,10 +459,8 @@ class SpelDocumentationTests extends AbstractExpressionTests {
     assertThat(message).isEqualTo("This is a prerecorded message with 3 words: <Oh Hello World!>");
   }
 
-  // 7.5.10
-
   @Test
-  void ternary() throws Exception {
+  void ternary() {
     String falseString = parser.parseExpression("false ? 'trueExp' : 'falseExp'").getValue(String.class);
     assertThat(falseString).isEqualTo("falseExp");
 
@@ -471,25 +478,39 @@ class SpelDocumentationTests extends AbstractExpressionTests {
     // queryResultString = "Nikola Tesla is a member of the IEEE Society"
   }
 
-  // 7.5.11
-
   @Test
   @SuppressWarnings("unchecked")
-  void selection() throws Exception {
+  void selection() {
     StandardEvaluationContext societyContext = new StandardEvaluationContext();
     societyContext.setRootObject(new IEEE());
     List<Inventor> list = (List<Inventor>) parser.parseExpression("Members2.?[nationality == 'Serbian']").getValue(societyContext);
-    assertThat(list.size()).isEqualTo(1);
+    assertThat(list).hasSize(1);
     assertThat(list.get(0).getName()).isEqualTo("Nikola Tesla");
   }
 
-  // 7.5.12
-
   @Test
-  void templating() throws Exception {
-    String randomPhrase = parser.parseExpression("random number is ${T(java.lang.Math).random()}",
-            new TemplateParserContext("${", "}")).getValue(String.class);
-    assertThat(randomPhrase.startsWith("random number")).isTrue();
+  void templating() {
+    String randomPhrase =
+            parser.parseExpression("random number is ${T(java.lang.Math).random()}", new TemplatedParserContext()).getValue(String.class);
+    assertThat(randomPhrase).startsWith("random number");
+  }
+
+  static class TemplatedParserContext implements ParserContext {
+
+    @Override
+    public String getExpressionPrefix() {
+      return "${";
+    }
+
+    @Override
+    public String getExpressionSuffix() {
+      return "}";
+    }
+
+    @Override
+    public boolean isTemplate() {
+      return true;
+    }
   }
 
   static class IEEE {
